feat: implement critical security fixes and major system improvements
🔒 SECURITY FIXES (UOL-333, UOL-334, UOL-336):
- Remove all hardcoded JWT secrets and database passwords
- Eliminate debug code logging sensitive data in production
- Fix overly permissive CORS configuration with environment-specific settings
- Add comprehensive security verification and testing framework

⚡ PERFORMANCE OPTIMIZATIONS (UOL-335):
- Implement N+1 query fixes with @EntityGraph annotations
- Add database performance indexes for critical relationships
- Create optimized PersonaService with batch fetching
- Add query performance monitoring and testing framework

🐛 CRITICAL BUG FIXES (UOL-238):
- Fix infinite recursion bug in ResponsiveGrid.tsx component
- Resolve component self-reference causing application crashes

🧪 COMPREHENSIVE TEST FRAMEWORK:
- Add extensive E2E test suites (300+ test scenarios)
- Implement cross-browser compatibility testing (Chromium, Firefox, WebKit)
- Create accessibility testing with WCAG 2.1 compliance checks
- Add security testing framework with penetration test scenarios
- Implement data integrity validation with 300+ test cases
- Add mobile responsiveness testing across devices
- Create performance testing and load testing frameworks

🏗️ INFRASTRUCTURE IMPROVEMENTS:
- Add comprehensive service health check controllers
- Implement proper environment variable management with .env.example
- Add database migration scripts for performance indexes
- Create service management scripts for development workflow
- Add Docker configuration improvements for backend services

📋 PROJECT MANAGEMENT:
- Add detailed TASKS.md with all Linear issue tracking
- Create comprehensive documentation for AI agent reference
- Add TDD setup summary and N+1 query completion reports
- Include security verification reports and implementation guides

🎯 LINEAR ISSUES RESOLVED:
- UOL-238: ✅ ResponsiveGrid infinite recursion fix
- UOL-333: ✅ Remove hardcoded secrets (VERIFIED & TESTED)
- UOL-3